[Finishes #157395526] Admin page to view request details

--- a/UI/admin.html
+++ b/UI/admin.html
@@ -30,7 +30,7 @@
     	</div>
         <ul class="requests">
             <li>
-                <a href="#" title="Click to view details">
+                <a href="details.html" title="Click to view details">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus error sint doloremque
                         laborum excepturi! Nemo recusandae, quod error corrupti modi.
                     </p>
@@ -39,7 +39,7 @@
             </li>
 
             <li>
-                <a href="#" title="Click to view details">
+                <a href="details.html" title="Click to view details">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus error sint doloremque
                         laborum excepturi! Nemo recusandae, quod error corrupti modi.
                     </p>
@@ -49,7 +49,7 @@
 
 
             <li>
-                <a href="#" title="Click to view details">
+                <a href="details.html" title="Click to view details">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus error sint doloremque
                         laborum excepturi! Nemo recusandae, quod error corrupti modi.
                     </p>
@@ -58,7 +58,7 @@
             </li>
 
             <li>
-                <a href="#" title="Click to view details">
+                <a href="details.html" title="Click to view details">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus error sint doloremque
                         laborum excepturi! Nemo recusandae, quod error corrupti modi.
                     </p>
@@ -67,7 +67,7 @@
             </li>
 
             <li>
-                <a href="#" title="Click to view details">
+                <a href="details.html" title="Click to view details">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus error sint doloremque
                         laborum excepturi! Nemo recusandae, quod error corrupti modi.
                     </p>
