[Finishes #157395914] User page for creating requests, [Fixed #157429664] Fix header Logout button

--- a/UI/admin.html
+++ b/UI/admin.html
@@ -11,7 +11,7 @@
     <a class="brand" href="#">M-Tracker</a>
     <nav class="nav-bar">
         <ul>
-            <li><a class="btn" href="#">Logout</a></li>
+            <li><a class="btn btn-default" href="#">Logout</a></li>
         </ul>
     </nav>
 </header>
@@ -20,7 +20,7 @@
     	<div class="list-header">
 	    	<h3>All requests</h3>
 	        <label for="filter">Filter By:</label>
-	        <select name="filter">
+	        <select id="filter" name="filter">
 	        	<option value='1'>Approved</option>
 	        	<option value='2'>Disapproved</option>
 	        	<option value='3'>Resolved</option>
