--- a/UI/sign-in.html
+++ b/UI/sign-in.html
@@ -12,15 +12,15 @@
 		<div class="form-inner">
 			<form>
 				<div class="input-group">
-					<label for="email">E-Mail</label>
-					<input type="email" name="email" placeholder="Your email">
+					<!--<label for="email">E-Mail</label>-->
+					<input type="email" id="email" name="email" placeholder="Enter your email">
 				</div>
 				<div class="input-group">
-					<label for="password">Password</label>
-					<input type="password" name="password" placeholder="Your password">
+					<!--<label for="password">Password</label>-->
+					<input type="password" id="password" name="password" placeholder="Enter your password">
 				</div>
 				<div class="input-group">
-					<input type="submit" value="Log in">
+					<input type="submit" class="btn btn-default" value="Log in">
 					<p>Do not have an account?&nbsp; <a href="sign-up.html">Sign Up</a></p>
 					<a href="#">Forgot password?</a>
 				</div>
