--- a/UI/sign-up.html
+++ b/UI/sign-up.html
@@ -12,23 +12,23 @@
 		<div class="form-inner">
 			<form>
 				<div class="input-group">
-					<label for="name">Name</label>
-					<input type="text" name="name" placeholder="Your name">
+					<!--<label for="name">Name</label>-->
+					<input type="text" id="name" name="name" placeholder="Enter your name">
 				</div>
 				<div class="input-group">
-					<label for="email">E-Mail</label>
-					<input type="email" name="email" placeholder="Your email">
+					<!--<label for="email">E-Mail</label>-->
+					<input type="email" id="email" name="email" placeholder="Enter your email">
 				</div>
 				<div class="input-group">
-					<label for="password">Password</label>
-					<input type="password" name="password" placeholder="Your password">
+					<!--<label for="password">Password</label>-->
+					<input type="password" id="password" name="password" placeholder="Enter your password">
 				</div>
 				<div class="input-group">
-					<label for="confirmPwd">Confirm password</label>
-					<input type="password" name="confirmPwd" placeholder="Confirm your password">
+					<!--<label for="confirmPwd">Confirm password</label>-->
+					<input type="password" id="confirmPwd" name="confirmPwd" placeholder="Confirm your password">
 				</div>
 				<div class="input-group">
-					<input type="submit" value="Sign up">
+					<input class="btn btn-default" type="submit" value="Sign up">
 					<p>Already have an account?&nbsp; <a href="sign-in.html">Sign In</a></p>
 				</div>
 			</form>
