[Finishes #157462454] Add date to request all views

--- a/UI/user.html
+++ b/UI/user.html
@@ -56,6 +56,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus error sint doloremque
                             laborum excepturi! Nemo recusandae, quod error corrupti modi.
                         </p>
+                        <span class="request-date">3 days ago</span>
                         <span class="label label-approved">Approved</span>
                     </a>
                 </li>
@@ -65,6 +66,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus error sint doloremque
                             laborum excepturi! Nemo recusandae, quod error corrupti modi.
                         </p>
+                        <span class="request-date">2 days ago</span>
                         <span class="label label-approved">Approved</span>
                     </a>
                 </li>
@@ -75,15 +77,16 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus error sint doloremque
                             laborum excepturi! Nemo recusandae, quod error corrupti modi.
                         </p>
+                        <span class="request-date">3 days ago</span>
                         <span class="label label-resolved">Resolved</span>
                     </a>
                 </li>
             </ul>
 
             <ul class="pagination">
-                <li class="active pg-link"><a href="#">1</a></li>
-                <li class="pg-link"><a href="#">2</a></li>
-                <li class="pg-link"><a href="#">3</a></li>
+                <li class="active"><a href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
             </ul>
         </section>
     </div>
