[Finishes #157462454] Add date to request all views

--- a/UI/admin.html
+++ b/UI/admin.html
@@ -34,6 +34,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus error sint doloremque
                         laborum excepturi! Nemo recusandae, quod error corrupti modi.
                     </p>
+                    <span class="request-date">3 days ago</span>
 	                <span class="label label-approved">Approved</span>
                 </a>
             </li>
@@ -43,6 +44,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus error sint doloremque
                         laborum excepturi! Nemo recusandae, quod error corrupti modi.
                     </p>
+                    <span class="request-date">3 days ago</span>
 	                <span class="label label-approved">Approved</span>
                 </a>
             </li>
@@ -53,6 +55,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus error sint doloremque
                         laborum excepturi! Nemo recusandae, quod error corrupti modi.
                     </p>
+                    <span class="request-date">3 days ago</span>
                 	<span class="label label-resolved">Resolved</span>
                 </a>
             </li>
@@ -62,6 +65,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus error sint doloremque
                         laborum excepturi! Nemo recusandae, quod error corrupti modi.
                     </p>
+                    <span class="request-date">3 days ago</span>
 	                <span class="label label-pending">Pending</span>
                 </a>
             </li>
@@ -71,16 +75,17 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus error sint doloremque
                         laborum excepturi! Nemo recusandae, quod error corrupti modi.
                     </p>
+                    <span class="request-date">3 days ago</span>
 	                <span class="label label-disapproved">Disapproved</span>
                 </a>
             </li>
         </ul>
 
-		<ul class="pagination">
-			<li class="active pg-link"><a href="#">1</a></li>
-			<li class="pg-link"><a href="#">2</a></li>
-			<li class="pg-link"><a href="#">3</a></li>
-		</ul>
+        <ul class="pagination">
+            <li class="active"><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+        </ul>
     </section>
 </div> <!--End of wrapper-->
 <footer>
