Finished #157715097] Modify UI design

--- a/UI/admin-detail.html
+++ b/UI/admin-detail.html
@@ -11,7 +11,7 @@
     <a class="brand" href="#">M-Tracker</a>
     <nav class="nav-bar">
         <ul>
-            <li><a class="btn btn-default" href="#">Logout</a></li>
+            <li><a class="btn btn-default" href="../index.html">Logout</a></li>
         </ul>
     </nav>
 </header>
