--- a/UI/details.html
+++ b/UI/details.html
@@ -11,7 +11,7 @@
     <a class="brand" href="#">M-Tracker</a>
     <nav class="nav-bar">
         <ul>
-            <li><a class="btn btn-default" href="#">Logout</a></li>
+            <li><a class="btn btn-default" href="../index.html">Logout</a></li>
         </ul>
     </nav>
 </header>
@@ -33,7 +33,7 @@
                 <a href="#" title="Click to view details"><span class="btn btn-approve">Approve</span></a>
                 <a href="#" title="Click to view details"><span class="btn btn-disapprove">Disapprove</span></a>
                 <a href="#" title="Click to view details"><span class="btn btn-resolve">Resolve</span></a>
-                <a href="admin.html" title="Go back"><span class="btn btn-default">Back</span></a>
+                <a href="../index.html" title="Go back"><span class="btn btn-default">Back</span></a>
             </div>
         </div>
     </section>
