--- a/UI/user.html
+++ b/UI/user.html
@@ -11,85 +11,80 @@
     <a class="brand" href="#">M-Tracker</a>
     <nav class="nav-bar">
         <ul>
-            <li><a class="btn btn-default" href="#">Logout</a></li>
+            <li><a class="btn btn-default" href="../index.html">Logout</a></li>
         </ul>
     </nav>
 </header>
 <div class="wrapper">
-    <div class="flex">
-        <section class="col">
-            <h3>Create new request</h3>
-            <div class="">
-                <form>
-                    <div class="input-group">
-                        <!--<label for='name'>Name: </label>-->
-                        <input type="text" id="name" name="name" placeholder="Enter your name" autofocus/>
-                        <!--<label for="email">E-mail: </label>-->
-                        <input type="email" id="email" name="email" placeholder="Enter your email"/>
-                        <!--<label for="dept">Department: </label>-->
-                        <input type="text" id="dept" name="dept" placeholder="Enter the department"/><br>
-                        <!--<label for="request">Request: </label>-->
-                        <textarea rows="5" id="request" name="request"
-                                  placeholder="Write the details of the request"></textarea>
-                    </div>
-                    <div class="input-group">
-                        <input type="submit" class="btn btn-default" name="submit" value="Submit request"/>
-                    </div>
-                </form>
-            </div>
-        </section>
-        <section class="list col">
-            <div class="list-header">
-                <h3>My requests</h3>
-                <label for="filter">Filter By:</label>
-                <select id="filter" name="filter">
-                    <option value='1'>Approved</option>
-                    <option value='2'>Disapproved</option>
-                    <option value='3'>Resolved</option>
-                    <option value='4'>Pending</option>
-                    <option value='4'>Most recent</option>
-                </select>
-            </div>
-            <ul class="requests">
-                <li>
-                    <a href="details.html" title="Click to view details">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus error sint doloremque
-                            laborum excepturi! Nemo recusandae, quod error corrupti modi.
-                        </p>
-                        <span class="request-date">3 days ago</span>
-                        <span class="label label-approved">Approved</span>
-                    </a>
-                </li>
+    <h3>Create new request</h3>
+    <form>
+        <div class="input-group">
+            <!--<label for='name'>Name: </label>-->
+            <input type="text" id="name" name="name" placeholder="Enter your name" autofocus/>
+            <!--<label for="email">E-mail: </label>-->
+            <input type="email" id="email" name="email" placeholder="Enter your email"/>
+            <!--<label for="dept">Department: </label>-->
+            <input type="text" id="dept" name="dept" placeholder="Enter the department"/><br>
+            <!--<label for="request">Request: </label>-->
+            <textarea rows="5" id="request" name="request"
+                      placeholder="Write the details of the request"></textarea>
+        </div>
+        <div class="input-group">
+            <input type="submit" class="btn btn-default" name="submit" value="Submit request"/>
+        </div>
+    </form>
 
-                <li>
-                    <a href="details.html" title="Click to view details">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus error sint doloremque
-                            laborum excepturi! Nemo recusandae, quod error corrupti modi.
-                        </p>
-                        <span class="request-date">2 days ago</span>
-                        <span class="label label-approved">Approved</span>
-                    </a>
-                </li>
+    <section class="list">
+        <div class="list-header">
+            <h3>My requests</h3>
+            <label for="filter">Filter By:</label>
+            <select id="filter" name="filter">
+                <option value='1'>Approved</option>
+                <option value='2'>Disapproved</option>
+                <option value='3'>Resolved</option>
+                <option value='4'>Pending</option>
+                <option value='4'>Most recent</option>
+            </select>
+        </div>
+        <ul class="requests">
+            <li>
+                <a href="details.html" title="Click to view details">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus error sint doloremque
+                        laborum excepturi! Nemo recusandae, quod error corrupti modi.
+                    </p>
+                    <span class="request-date">3 days ago</span>
+                    <span class="label label-approved">Approved</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="details.html" title="Click to view details">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus error sint doloremque
+                        laborum excepturi! Nemo recusandae, quod error corrupti modi.
+                    </p>
+                    <span class="request-date">2 days ago</span>
+                    <span class="label label-approved">Approved</span>
+                </a>
+            </li>
 
 
-                <li>
-                    <a href="details.html" title="Click to view details">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus error sint doloremque
-                            laborum excepturi! Nemo recusandae, quod error corrupti modi.
-                        </p>
-                        <span class="request-date">3 days ago</span>
-                        <span class="label label-resolved">Resolved</span>
-                    </a>
-                </li>
-            </ul>
+            <li>
+                <a href="details.html" title="Click to view details">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus error sint doloremque
+                        laborum excepturi! Nemo recusandae, quod error corrupti modi.
+                    </p>
+                    <span class="request-date">3 days ago</span>
+                    <span class="label label-resolved">Resolved</span>
+                </a>
+            </li>
+        </ul>
 
-            <ul class="pagination">
-                <li class="active"><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-            </ul>
-        </section>
-    </div>
+        <ul class="pagination">
+            <li class="active"><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+        </ul>
+    </section>
 </div> <!--End of wrapper-->
 <footer>
     <p>&copy;2018 VeeqTor</p>
