--- a/UI/admin-sign-in.html
+++ b/UI/admin-sign-in.html
@@ -8,13 +8,9 @@
 </head>
 <body>
 	<div class="form-wrapper">
-		<h2 class="title">User Sign Up</h2>
+		<h2 class="title">Admin Log in</h2>
 		<div class="form-inner">
-			<form action="user.html">
-				<div class="input-group">
-					<!--<label for="name">Name</label>-->
-					<input type="text" id="name" name="name" placeholder="Enter your name">
-				</div>
+			<form action="admin-detail.html">
 				<div class="input-group">
 					<!--<label for="email">E-Mail</label>-->
 					<input type="email" id="email" name="email" placeholder="Enter your email">
@@ -24,16 +20,10 @@
 					<input type="password" id="password" name="password" placeholder="Enter your password">
 				</div>
 				<div class="input-group">
-					<!--<label for="confirmPwd">Confirm password</label>-->
-					<input type="password" id="confirmPwd" name="confirmPwd" placeholder="Confirm your password">
-				</div>
-				<div class="input-group">
-					<input class="btn btn-default" type="submit" value="Sign up">
-					<p>Already have an account?&nbsp; <a href="sign-in.html">Sign In</a></p>
+					<input type="submit" class="btn btn-default" value="Log in">
 				</div>
 			</form>
 		</div>
-	</div>
-</div> <!--End of wrapper-->
+	</div>	<!--End of wrapper-->
 </body>
 </html>
