--- a/index.html
+++ b/index.html
@@ -7,36 +7,28 @@
     <link rel="stylesheet" type="text/css" href="UI/css/style.css">
 </head>
 <body>
-<header>
+<div class="bg">
 
-    <a class="brand" href="#">M-Tracker</a>
-    <nav class="nav-bar">
-        <ul>
-            <li><a class="btn btn-default" href="UI/sign-in.html">GET STARTED</a></li>
-        </ul>
-    </nav>
-</header>
-<div class="wrapper">
-    <ul class="features">
-        <li>
-            <a href="UI/sign-in.html" title="Click to view details">Login Page</a>
-        </li>
-        <li>
-            <a href="UI/sign-up.html" title="Click to view details">Sign Page</a>
-        </li>
-        <li>
-            <a href="UI/admin.html" title="Click to view details">Admin view Page</a>
-        </li>
-        <li>
-            <a href="UI/details.html" title="Click to view details">Request details Page</a>
-        </li>
-        <li>
-            <a href="UI/user.html" title="Click to view details">User Request Page</a>
-        </li>
-    </ul>
-</div> <!--End of wrapper-->
-<footer>
-    <p>&copy;2018 VeeqTor</p>
-</footer>
+
+    <header>
+
+        <a class="brand" href="#">M-Tracker</a>
+        <nav class="nav-bar">
+            <ul>
+                <li><a class="btn btn-default" href="UI/sign-in.html">GET STARTED</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="wrapper">
+        <div class="landing">
+            <h1>M-tracker</h1>
+            <p>Maintenance/repairs at your convenience</p><br>
+            <a class="btn btn-landing" href="UI/sign-in.html"> Get started</a>
+        </div>
+    </div> <!--End of wrapper-->
+    <footer>
+        <p>&copy;2018 VeeqTor</p>
+    </footer>
+</div>
 </body>
 </html>
