--- a/UI/user.html
+++ b/UI/user.html
@@ -48,7 +48,7 @@
         </div>
         <ul class="requests">
             <li>
-                <a href="details.html" title="Click to view details">
+                <a href="user-view-details.html" title="Click to view details">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus error sint doloremque
                         laborum excepturi! Nemo recusandae, quod error corrupti modi.
                     </p>
@@ -58,7 +58,7 @@
             </li>
 
             <li>
-                <a href="details.html" title="Click to view details">
+                <a href="user-view-details.html" title="Click to view details">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus error sint doloremque
                         laborum excepturi! Nemo recusandae, quod error corrupti modi.
                     </p>
@@ -69,7 +69,7 @@
 
 
             <li>
-                <a href="details.html" title="Click to view details">
+                <a href="user-view-details.html" title="Click to view details">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus error sint doloremque
                         laborum excepturi! Nemo recusandae, quod error corrupti modi.
                     </p>
