--- a/UI/user-view-details.html
+++ b/UI/user-view-details.html
@@ -31,7 +31,7 @@
                  eius quibusdam earum delectus consectetur corporis!</li>
             </ul>
             <div>
-                <a href="admin-detail.html" title="Go back"><span class="btn btn-default">Back</span></a>
+                <a href="user.html" title="Go back"><span class="btn btn-default">Back</span></a>
             </div>
         </div>
     </section>
