Update UI files

--- a/UI/index.html
+++ b/UI/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>M-Tracker</title>
-    <link rel="stylesheet" type="text/css" href="UI/css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <div class="bg">
@@ -15,7 +15,7 @@
         <a class="brand" href="#">M-Tracker</a>
         <nav class="nav-bar">
             <ul>
-                <li><a class="btn btn-default" href="UI/sign-in.html">GET STARTED</a></li>
+                <li><a class="btn btn-default" href="sign-in.html">GET STARTED</a></li>
             </ul>
         </nav>
     </header>
@@ -23,7 +23,7 @@
         <div class="landing">
             <h1>M-tracker</h1>
             <p>Maintenance/repairs at your convenience</p><br>
-            <a class="btn btn-landing" href="UI/sign-in.html"> Get started</a>
+            <a class="btn btn-landing" href="sign-in.html"> Get started</a>
         </div>
     </div> <!--End of wrapper-->
     <footer>
